--- a/4_Warsztaty/SitOnChair.html
+++ b/4_Warsztaty/SitOnChair.html
@@ -32,10 +32,15 @@
     <div class="container">
         <div class="arrows"><a href="link">&lt;</a></div>
         <div><img class="blackChair" src="images/black_chair.png"></div>
-        <div>
-            <h1 class="h1"><span>SIT</span><span>ON</span><span>OUR</span><span>CHAIR</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi autem commodi dolor eaque ex, exercitationem ipsam iure mollitia nam, necessitatibus nisi quos rerum saepe sed, sunt voluptate voluptatum.</p>
-            <button>ZOBACZ WIĘCEJ</button>
+        <div id="article">
+            <h1 class="h1">
+                <span>SIT</span>
+                <span>ON</span>
+                <span>OUR</span>
+                <span>CHAIR</span>
+            </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi autem commodi dolor eaque ex, exercitationem ipsam iure mollitia nam, necessitatibus nisi quos rerum saepe sed, sunt voluptate voluptatum.</p>
+            <button><a href="link">ZOBACZ WIĘCEJ</a></button>
         </div>
         <div class="arrows"><a href="link">&gt;</a></div>
     </div>
@@ -49,6 +54,85 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, neque.</p>
     </div>
 </section>
+<section class="section3">
+    <div class="container">
+        <div class="titleSection3">
+            <h2>CENNIK</h2>
+        </div>
+        <div class="prices">
+            <div class="priceBox">
+                <p class="plans">BASIC PLAN</p>
+                <div class="price">
+                    <p>
+                        85<sup>99</sup>
+                    </p>
+                    <p>
+                        PLN/MSC
+                    </p>
+                </div>
+                <div>Zakup towaru + dowóz</div>
+                <div>Serwis</div>
+                <button class="buttonLeftRight"><a href="link">DOŁĄCZ</a></button>
+            </div>
+            <div class="priceBox--Middle">
+                <div>
+                    <p class="plansStandard">STANDARD PLAN</p>
+                </div>
+                <div class="priceStandard">
+                    <p>
+                        95<sup>99</sup>
+                    </p>
+                    <p>
+                        PLN/MSC
+                    </p>
+                </div>
+                <div>Zakup towaru + dowóz</div>
+                <div>Serwis</div>
+                <div>Gwarancja 5 lat</div>
+                <button id="buttonMiddle"><a href="link">DOŁĄCZ</a></button>
+            </div>
+            <div class="priceBox">
+                <p class="plans">ADVANCE PLAN</p>
+                <div class="price">
+                    <p>
+                        211<sup>00</sup>
+                    </p>
+                    <p>
+                        PLN/MSC
+                    </p>
+                </div>
+                <div>Zakup towaru + dowóz</div>
+                <div>Serwis</div>
+                <div>Gwarancja 6 lat</div>
+                <div>Porady projektanta</div>
+                <button class="buttonLeftRight"><a href="link">DOŁĄCZ</a></button>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section4">
+    <div class="container">
+        <div id="contact">
+            <h2>KONTAKT</h2>
+        </div>
+        <div class="section4--Form-Chair">
+            <div>
+                <form>
+                    <input type="text" placeholder="Imię"><br>
+                    <input type="email" placeholder="e-mail"><br>
+                    <textarea name="wiadomość" placeholder="Wiadomość"></textarea>
+                </form>
+            </div>
+            <div class="section4--Chair">
+                <img id="redChair" src="images/red_chair.png">
+                <input type="checkbox"/>Zgadzam się na przetwarzanie danych osobowych<br>
+                <input type="submit" value="WYŚLIJ">
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
 
+</footer>
 </body>
 </html>
