--- a/4_Warsztaty/SitOnChair.html
+++ b/4_Warsztaty/SitOnChair.html
@@ -131,7 +131,22 @@
         </div>
     </div>
 </section>
-<footer>
+<footer class="container">
+    <p>Copyright 2018 | All Rights Reserved. - Sit On Chair</p>
+
+       <div class="footer">
+
+            <a href="#"><img src="images/flickr.png" alt="flick" /></a>
+            <a href="#"><img src="images/vimeo.png" alt="vimeo" /></a>
+            <a href="#"><img src="images/pinterest.png" alt="pinterest" /></a>
+            <a href="#"><img src="images/twitter.png" alt="twitter" /></a>
+
+            <div class="logo2">
+                <p>SIT</p>
+                <p>ON</p>
+                <p>CHAIR</p>
+            </div>
+        </div>
 
 </footer>
 </body>
