--- a/4_Warsztaty/SitOnChair.html
+++ b/4_Warsztaty/SitOnChair.html
@@ -125,7 +125,11 @@
             </div>
             <div class="section4--Chair">
                 <img id="redChair" src="images/red_chair.png">
-                <input type="checkbox"/>Zgadzam się na przetwarzanie danych osobowych<br>
+                <div class="checkbox">
+                    <input type="checkbox" id="checkbox" value="Zgadzam się na przetwarzanie danych osobowych"/>
+                    <label for="checkbox"></label>
+                    <label for="checkbox">Zgadzam się na przetwarzanie danych osobowych</label>
+                </div>
                 <input type="submit" value="WYŚLIJ">
             </div>
         </div>
