--- a/4_Warsztaty/SitOnChair.html
+++ b/4_Warsztaty/SitOnChair.html
@@ -125,9 +125,8 @@
             </div>
             <div class="section4--Chair">
                 <img id="redChair" src="images/red_chair.png">
-                <div class="checkbox">
+                <div class="checkbox check-box">
                     <input type="checkbox" id="checkbox" value="Zgadzam się na przetwarzanie danych osobowych"/>
-                    <label for="checkbox"></label>
                     <label for="checkbox">Zgadzam się na przetwarzanie danych osobowych</label>
                 </div>
                 <input type="submit" value="WYŚLIJ">
