--- a/4_Warsztaty/SitOnChair.html
+++ b/4_Warsztaty/SitOnChair.html
@@ -30,8 +30,14 @@
 </header>
 <section class="section1">
     <div class="container">
-        <div class="arrows"><a href="link">&lt;</a></div>
-        <div><img class="blackChair" src="images/black_chair.png"></div>
+        <div class="arrows" id="prevPicture"><a href="link">&lt;</a></div>
+        <div class="slider">
+            <ul>
+                <li><img class="blackChair" src="images/black_chair.png"></li>
+                <li><img class="blackChair" src="images/orange_chair.png"></li>
+                <li><img src="images/red_chair.png"></li>
+            </ul>
+         </div>
         <div id="article">
             <h1 class="h1">
                 <span>SIT</span>
@@ -42,7 +48,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi autem commodi dolor eaque ex, exercitationem ipsam iure mollitia nam, necessitatibus nisi quos rerum saepe sed, sunt voluptate voluptatum.</p>
             <button><a href="link">ZOBACZ WIĘCEJ</a></button>
         </div>
-        <div class="arrows"><a href="link">&gt;</a></div>
+        <div class="arrows" id="nextPicture"><a href="link">&gt;</a></div>
     </div>
 </section>
 <section class="container">
@@ -152,5 +158,6 @@
         </div>
 
 </footer>
+<script src="app.js"></script>
 </body>
 </html>
