--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
             <ul>
                 <li><img class="blackChair" src="images/black_chair.png"></li>
                 <li><img class="blackChair" src="images/orange_chair.png"></li>
-                <li><img src="images/red_chair.png"></li>
+                <li><img class="redChair" src="images/red_chair.png"></li>
             </ul>
          </div>
         <div id="article">
